# astrocommunity-cli

./: Cargo.toml  README.md
.github/workflows/: release.yaml
src/: astrocommunity.rs  file_system.rs  fzf.rs  git_operations.rs  main.rs  opts.rs  util.rs
