[package]
name = "astrocommunity-cli"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"], default-features = false }
serde_json = "1"
tokio = { version = "1", features = [
  "rt-multi-thread",
  "macros",
  "signal",
], default-features = false }
clap = { version = "4", features = ["derive", "std", "help", "color"] }
anyhow = "1"
regex = "1"
cli-clipboard = "0.4.0"
which = "4.4.0"
syntect = "5.0.0"
dirs = "5.0.1"
once_cell = "1.18.0"
walkdir = "2.3.3"
